--- a/Model/final_model.ipynb
+++ b/Model/final_model.ipynb
@@ -205,9 +205,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "So using other body parameters like age , gender , chest pain type and maximum resting heart rate we are able to accurately determine the body cholestrol level. Also check out the video posted in the dev mesh site for a live demo.\n",
-    "\n",
-    "Link : <a href=\"https://devmesh.intel.com/projects/heart-disease-detection-using-machine-learning\">\"Cardiac Abnormality Detection using Machine Learning\"</a>"
+    "So using other body parameters like age , gender , chest pain type and maximum resting heart rate we are able to accurately determine the body cholestrol level.
    ]
   }
  ],
